# pybinclock

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  README_enhanced.md  README_improved.md  install-daemon.sh  pybinclock.service  pyproject.toml  requirements.txt  sample_config.json  setup.sh  uninstall.sh
.github/workflows/: codeql.yml
pybinclock/: BinClockLEDs.py  BinClockLEDs_improved.py  BinClockLEDs_nobuttons.py  PyBinClock.py  __init__.py  config.py
tests/: test_config.py  test_current_time.py  test_led_controllers.py  test_pybinclock.py
themes/: amber_theme.json  blue_theme.json  green_theme.json  purple_theme.json
