[tool.poetry]
name = "pybinclock"
version = "0.1.0"
description = ""
authors = ["Robert Sigler <sigler@improvisedscience.org>"]

[tool.poetry.dependencies]
python = "^3.9"
unicornhatmini = "^0.0.2"
"RPi.GPIO" = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.7.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pybinclock = "pybinclock:PyBinClock"