[project]
name = "pybinclock"
version = "0.1.0"
description = ""
authors = [{name = "Robert Sigler", email = "sigler@improvisedscience.org"}]
requires-python = ">=3.9"
dependencies = [
    "unicornhatmini>=0.0.2",
    "RPi.GPIO>=0.7.1",
    "loguru>=0.7.3",
    "gpiozero>=2.0.1",
    "Pillow>=11.0.0",
    "lgpio>=0.2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "autopep8>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
PyBinClock = "pybinclock:PyBinClock"
BinClockLEDs = "pybinclock:BinClockLEDs"

[tool.uv]
dev-dependencies = [
    "pytest>=6.2",
    "autopep8>=1.7.0",
]